# Klug-K

./: README.md  requirements.txt
backend/: .env.example  pyproject.toml
backend/apps/common/api/: placeholders.py  views.py
backend/apps/dashboard/: __init__.py  services.py
backend/apps/dashboard/api/: urls.py  views.py
backend/apps/floor/: __init__.py  apps.py  services.py
backend/apps/floor/api/: __init__.py  urls.py  views.py
backend/apps/menu/: __init__.py  services.py
backend/apps/menu/api/: __init__.py  urls.py  views.py
backend/apps/orders/: __init__.py  services.py
backend/apps/orders/api/: urls.py  views.py
backend/apps/reservations/: __init__.py  services.py
backend/apps/reservations/api/: __init__.py  urls.py  views.py
backend/apps/supplies/: __init__.py  apps.py  services.py
backend/apps/supplies/api/: __init__.py  urls.py  views.py
backend/apps/tenancy/: auth.py  permissions.py  services.py
backend/config/: urls.py
backend/config/settings/: base.py  production.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
frontend/src/: main.tsx
frontend/src/app/: App.tsx
frontend/src/components/: AppShell.tsx  InfoCard.tsx  PageFrame.tsx
frontend/src/lib/: adminConfig.ts  api.ts  auth.tsx  supabase.ts  useApiResource.ts
frontend/src/pages/: AccountSettingsPage.tsx  AuthPage.tsx  ConfigurePage.tsx  DashboardPage.tsx  FloorLayoutPage.tsx  MenuPage.tsx  NotificationsPage.tsx  OnboardingSetupPage.tsx  OrdersPage.tsx  ProfilePage.tsx  ReservationsPage.tsx  (+3 more)
(+2 files in other folders)
